# Eventron

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  Makefile  alembic.ini  claude.md  docker-compose.yml  orgin.txt  pyproject.toml  seating_agent_architecture.docx
.github/workflows/: deploy.yml
agents/: __init__.py  graph.py  llm_factory.py  orchestrator.py  registry.py  state.py
agents/plugins/: __init__.py  badge.py  base.py  change.py  checkin.py  guide.py  identity.py  organizer.py  pagegen.py  planner.py  seating.py
agents/tools/: checkin_tools.py  seating_tools.py
app/: config.py  deps.py  llm_factory.py  main.py
app/api/: agent_chat.py  approvals.py  attendees.py  auth.py  badge_templates.py  dashboard.py  event_files.py  events.py  export.py  import_attendees.py  public_checkin.py  seats.py  venue_areas.py
app/models/: __init__.py  approval.py  attendee.py  badge_template.py  base.py  event.py  organizer.py  seat.py  venue_area.py
app/repositories/: approval_repo.py  attendee_repo.py  badge_template_repo.py  base.py  event_repo.py  organizer_repo.py  seat_repo.py  venue_area_repo.py
app/schemas/: __init__.py  approval.py  attendee.py  auth.py  badge_template.py  dashboard.py  event.py  import_preview.py  seat.py  venue_area.py
app/services/: approval_service.py  attendee_service.py  auth_service.py  badge_template_service.py  checkin_service.py  dashboard_service.py  event_service.py  exceptions.py  identity_service.py  import_service.py  seating_service.py  session_service.py
deploy/: .env.prod.template
migrations/: env.py
migrations/versions/: b09e6c1a0f60_add_organizer_and_badge_template.py  (+3 more)
scripts/: create_admin.py  seed.py
tests/: conftest.py  factories.py  test_smoke.py
tools/: excel_io.py  file_extract.py  qr_gen.py  seating_engine.py
web/: package-lock.json  package.json
(+38 files in other folders)
